Add Testimonials and then add it as test in nav bar

--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -21,6 +21,7 @@
               <li><a routerLink="/store" routerLinkActive="active">store</a></li>
               <li><a routerLink="/Admin" routerLinkActive="active">Admin</a></li>
               <li><a routerLink="/login" routerLinkActive="active">login</a></li>
+              <li><a routerLink="/Testimonials" routerLinkActive="active">Testimonials</a></li>
 
 
               <li class="phone-num">
@@ -28,7 +29,7 @@
               </li>
               <li><a routerLink="/Shop" routerLinkActive="active">Shop</a></li>
 
-             
+
               <li class="search-btn search-trigger">
                 <i class="fa fa-search"></i>
               </li>
