--- a/gumandhealth.client/src/app/pages/shop/shop.component.html
+++ b/gumandhealth.client/src/app/pages/shop/shop.component.html
@@ -37,7 +37,7 @@
             <!-- Category Actions-->
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
               <div class="text-center">
-                <a class="btn btn-outline-dark mt-auto" [routerLink]="['/products', category.id]">View</a>
+                <a class="btn btn-outline-dark mt-auto" [routerLink]="['/products/category', category.id]">View</a>
               </div>
             </div>
           </div>
