--- a/gumandhealth.client/src/app/nutrition/recipe-detail/recipe-detail.component.html
+++ b/gumandhealth.client/src/app/nutrition/recipe-detail/recipe-detail.component.html
@@ -4,7 +4,8 @@
     <div class="book">
       <!-- الجهة اليسرى (الصورة) -->
       <div class="book-left">
-        <img [src]="'/assets/img/' + recipe.image" alt="{{ recipe.name }} Image">
+        <img src="https://localhost:7280/api/RecipeCategory/getImage/{{recipe.image}}" alt="{{ recipe.name }} Image">
+
       </div>
 
       <!-- الجهة اليمنى (المعلومات) -->
