--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -97,11 +97,12 @@
               <span>Classes</span>
               <span class="badge badge-pill badge-danger">3</span>
             </a>
+
             <div class="sidebar-submenu">
               <ul>
                 <li>
-                  <a href="#">
-                    Products
+                  <a routerLink="/recipe-category-admin">
+                    Recipe
                   </a>
                 </li>
                 <li>
@@ -139,9 +140,12 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-            <a href="#">
-              <i class="fa fa-chart-line"></i>
-              <span>Charts</span>
+            <!--<a href="#">
+    <i class="fa fa-chart-line"></i>
+    <span>Charts</span>
+  </a>-->
+            <a routerLink="/recipe-category-admin">
+              Recipe
             </a>
             <div class="sidebar-submenu">
               <ul>
