--- a/gumandhealth.client/src/app/nutrition/recipes/recipes.component.html
+++ b/gumandhealth.client/src/app/nutrition/recipes/recipes.component.html
@@ -1,21 +1,20 @@
 <div class="container mt-5">
-  <h2 class="text-center mb-4">
-    Recipe Categories
-  </h2>
+  <h2 class="text-center mb-4">Recipe Categories</h2>
   <div class="row">
     <div class="col-md-4 mb-4" *ngFor="let category of recipeCategories">
-      <!-- تغيير col-md-6 إلى col-md-4 -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <!-- الوجه الأمامي: الصورة -->
           <div class="flip-card-front">
-            <img [src]="'/assets/img/' + category.imagePath" class="card-img-top" alt="{{ category.name }} Image">
+            <img src="https://localhost:7280/api/RecipeCategory/getImage/{{category.imagePath}}" class="card-img-top" alt="{{ category.name }} Image">
+
+
           </div>
           <!-- الوجه الخلفي: العنوان والنص -->
           <div class="flip-card-back">
             <h5 class="card-title">{{ category.name }}</h5>
             <p class="card-text">{{ category.description }}</p>
-            <button class="btn btn-light" (click)="viewRecipeDetails(category.id)">View Details</button> <!-- إضافة الزر -->
+            <button class="btn btn-light" (click)="viewRecipeDetails(category.id)">View Details</button>
           </div>
         </div>
       </div>
