add cart counter to the cart Items

--- a/gumandhealth.client/src/app/pages/cart/cart.component.html
+++ b/gumandhealth.client/src/app/pages/cart/cart.component.html
@@ -3,7 +3,8 @@
 
   <!-- Display message if the cart is empty -->
   <div *ngIf="cartItems.length === 0" class="text-center my-5">
-    <p>Your cart is empty.</p>
+    <h3>Your cart is empty.</h3>
+    <img src="assets/img/NoItemsInCart.svg" alt="Empty Cart" class="img-fluid" />
   </div>
 
   <!-- Display cart items if the cart is not empty -->
