--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -18,18 +18,20 @@
               <li><a routerLink="/shop" routerLinkActive="active">Shop</a></li>
               <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li> 
               <li><a routerLink="/testimonials" routerLinkActive="active">Testimonials</a></li>
-
+              
+              
+              <li class="cart-link"><a routerLink="/cart" routerLinkActive="active"><i class="fa fa-cart-shopping"></i></a> <span class="cart-page">{{cartService.getTotalItems()}}</span> </li>
               <!-- Show Profile and Logout when the user is logged in -->
               <li *ngIf="isLoggedIn"><a routerLink="/profile" routerLinkActive="active">Profile</a></li>
               <li *ngIf="isLoggedIn"><a (click)="onLogout()">Logout</a></li>
-
+              
               <!-- Show Login when the user is not logged in -->
               <li *ngIf="!isLoggedIn"><a routerLink="/login" routerLinkActive="active">Login</a></li>
-
+              
               <li class="phone-num">
                 <i class="fa fa-phone"></i><span>+546 990221 123</span>
               </li>
-
+              
               <li class="search-btn search-trigger">
                 <i class="fa fa-search"></i>
               </li>
