--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -92,7 +92,7 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-            <a routerLink="/displayClasses">
+            <a routerLink="/admin/classes">
               <i class="fa fa-shopping-cart"></i>
               <span>Classes</span>
               <span class="badge badge-pill badge-danger">3</span>
