--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
               <li><a routerLink="/Profile" routerLinkActive="active">Profile</a></li>
               <li><a routerLink="/Gyms" routerLinkActive="active">Gyms</a></li>
               <li><a routerLink="/store" routerLinkActive="active">store</a></li>
-              <li><a routerLink="/Admin" routerLinkActive="active">Admin</a></li>
+              <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li>
               <li><a routerLink="/login" routerLinkActive="active">login</a></li>
 
 
