update footer + header+home

--- a/gumandhealth.client/src/app/components/footer/footer.component.html
+++ b/gumandhealth.client/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer Section Begin -->
-<footer class="footer-section" >
+<footer class="footer-section">
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
@@ -11,16 +11,22 @@
               document.write(new Date().getFullYear());
             </script>
             All rights reserved | This template is made with
-            <i class="fa fa-heart-o" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+           
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </div>
+          <br />
+          <!-- Links Section -->
+          <div class="footer-links">
+            <a href="/terms-of-service">Terms of Service</a> |
+            <a href="/privacy-policy">Privacy Policy</a> |
+            <a href="/support">Support</a>
+          </div>
+
+          <!-- Social Media Section -->
           <div class="social-links">
-            <a href="#"><i class="fa fa-pinterest"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-behance"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
           </div>
         </div>
       </div>
