add admin recipe file get and post

--- a/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.html
@@ -32,6 +32,10 @@
           <td>
             <!-- زر التعديل -->
             <button class="btn btn-warning btn-sm mr-2" (click)="editCategory(category.id)">Edit</button>
+            <br />            <br />
+
+            <button class="btn btn-info btn-sm mr-2" (click)="viewRecipe(category.id)">viewRecipe</button>
+
             <!-- زر الحذف -->
             <!--<button class="btn btn-danger btn-sm" (click)="deleteCategory(category.id)">Delete</button>-->
           </td>
