--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -29,13 +29,13 @@
               <!-- Show Login when the user is not logged in -->
               <li *ngIf="!isLoggedIn"><a routerLink="/login" routerLinkActive="active">Login</a></li>
               <li class="phone-num">
-                <i class="fa fa-phone"></i><span>+546 990221 123</span>
-              </li>
+                <!--<i class="fa fa-phone"></i><span>+546 990221 123</span>
+              </li>-->
 
 
-              <li class="search-btn search-trigger">
-                <i class="fa fa-search"></i>
-              </li>
+              <!--<li class="search-btn search-trigger">-->
+                <!--<i class="fa fa-search"></i>
+              </li>-->
             </ul>
           </nav>
           <div id="mobile-menu-wrap"></div>
