--- a/gumandhealth.client/src/app/components/product-card/product-card.component.css
+++ b/gumandhealth.client/src/app/components/product-card/product-card.component.css
@@ -89,3 +89,18 @@
   margin-bottom: 19%;
   margin-top: 17%;
 }
+.price-range input[type=range] {
+  width: 100%;
+}
+
+.price-range {
+  margin-bottom: 20px;
+}
+
+.card {
+  transition: transform 0.3s ease;
+}
+
+  .card:hover {
+    transform: scale(1.05);
+  }
