--- a/gumandhealth.client/src/app/components/product-card/product-card.component.html
+++ b/gumandhealth.client/src/app/components/product-card/product-card.component.html
@@ -1,68 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <title>Shop Homepage</title>
-  <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <!-- Bootstrap icons-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-  <!-- Core theme CSS (includes Bootstrap)-->
-</head>
-
-<body>
-  <!-- Section-->
-  <section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
-      <div class="row">
-        <!-- Filter Section -->
-        <div class="col-lg-3">
-          <h3 class="fw-bold">CATEGORIES</h3>
-          <ul class="list-unstyled">
-            <li *ngFor="let category of categories">
-              <input type="checkbox" (change)="onCategorySelect(category.id)" />
-              {{ category.name }} 
-            </li>
-          </ul>
-
-          <h4 class="fw-bold mt-4">PRICE</h4>
-          <div class="price-range">
-            <input type="range" class="form-range" min="1" max="1000" step="0.5" [(ngModel)]="minPrice" (change)="filterByPrice()" />
-            <input type="range" class="form-range" min="1" max="1000" step="0.5" [(ngModel)]="maxPrice" (change)="filterByPrice()" />
-            <div class="d-flex justify-content-between">
-              <span>{{ minPrice | currency:'USD' }}</span>
-              <span>{{ maxPrice | currency:'USD' }}</span>
-            </div>
-          </div>
+<div class="container">
+  <div class="row">
+    <div *ngFor="let product of products" class="col-md-4">
+      <div class="card product-card mb-4">
+        <img [src]="imageurl(product.image1)" class="card-img-top product-image" alt="Product Image" />
+        <div class="card-body text-center">
+          <h5 class="product-name">{{ product.name }}</h5>
+          <p class="product-price">{{ product.price | currency:'JD':true }}</p>
+        </div>
+        <div class="add-to-cart-overlay">
+          <button class="btn btn-add-to-cart" (click)="addToCart(product)">
+            Add to Cart
+          </button>
+          <button class="btn btn-show-description" (click)="toggleDescription(product)">
+            {{ product.showDescription ? 'Hide Description' : 'Show Description' }}
+          </button>
         </div>
 
-        <!-- Products Section -->
-        <div class="col-lg-9">
-          <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div *ngFor="let product of filteredProducts" class="col mb-5">
-              <div class="card h-100">
-                <img class="card-img-top" [src]="product.image1 || 'https://dummyimage.com/450x300/dee2e6/6c757d.jpg'" alt="{{ product.name }}" />
-                <div class="card-body p-4 text-center">
-                  <h5 class="fw-bolder">{{ product.name }}</h5>
-                  <p>{{ product.price | currency }}</p>
-                </div>
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent text-center">
-                  <a class="btn btn-outline-dark mt-auto" (click)="addToCart(product)">Add to Cart</a>
-                </div>
-              </div>
-            </div>
-          </div>
+        <!-- Description Section -->
+        <div *ngIf="product.showDescription" class="product-description">
+          <p>{{ product.description }}</p>
         </div>
       </div>
     </div>
-  </section>
-
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+  </div>
+</div>
