--- a/gumandhealth.client/src/app/pages/register/register.component.html
+++ b/gumandhealth.client/src/app/pages/register/register.component.html
@@ -30,9 +30,9 @@
     </div>
 
     <!-- Button Group -->
-    <div class="button-group">
-      <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Register</button>
-      <button type="button" class="btn btn-secondary" routerLink="/login">Login</button>
-    </div>
+   
+      <button type="submit" class="btn btn-primary w-100" [disabled]="registerForm.invalid">Register</button>
+      <button type="button" class="btn btn-secondary w-100 mt-2" routerLink="/login">Login</button>
+   
   </form>
 </div>
